Fleet UI: Homepage macOS card order, fix arrow alignment (#7612)

--- a/frontend/pages/Homepage/cards/MDM/_styles.scss
+++ b/frontend/pages/Homepage/cards/MDM/_styles.scss
@@ -56,6 +56,7 @@
           text-overflow: none;
           img {
             vertical-align: text-top;
+            height: 16px;
             width: 16px;
           }
         }
